sumo/tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__empty4/errors.netconvert
Error: Attribute 'nolanes' in definition of edge '4' is empty.
Quitting (on error).
